--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YarrList - Ahoy, Mateys!</title>
+    <title>YarrList - Kya Bolti Puplic!</title>
    <style>
        a {
   color: #ffc300;
